doc: Clean-up & add basic docstring for agent

--- a/connectx-getting-started-variant.ipynb
+++ b/connectx-getting-started-variant.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Install-kaggle-environments\" data-toc-modified-id=\"Install-kaggle-environments-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Install kaggle-environments</a></span></li><li><span><a href=\"#Create-ConnectX-Environment\" data-toc-modified-id=\"Create-ConnectX-Environment-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Create ConnectX Environment</a></span></li><li><span><a href=\"#Create-an-Agent\" data-toc-modified-id=\"Create-an-Agent-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Create an Agent</a></span></li><li><span><a href=\"#Test-your-Agent\" data-toc-modified-id=\"Test-your-Agent-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Test your Agent</a></span></li><li><span><a href=\"#Debug/Train-your-Agent\" data-toc-modified-id=\"Debug/Train-your-Agent-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Debug/Train your Agent</a></span></li><li><span><a href=\"#Evaluate-your-Agent\" data-toc-modified-id=\"Evaluate-your-Agent-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Evaluate your Agent</a></span></li><li><span><a href=\"#Play-your-Agent\" data-toc-modified-id=\"Play-your-Agent-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Play your Agent</a></span></li><li><span><a href=\"#Write-Submission-File\" data-toc-modified-id=\"Write-Submission-File-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Write Submission File</a></span></li><li><span><a href=\"#Validate-Submission\" data-toc-modified-id=\"Validate-Submission-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>Validate Submission</a></span></li><li><span><a href=\"#Submit-to-Competition\" data-toc-modified-id=\"Submit-to-Competition-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>Submit to Competition</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Install kaggle-environments"
@@ -91,24 +101,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create an Agent\n",
-    "\n",
-    "To create the submission, an agent function should be fully encapsulated (no external dependencies).  \n",
-    "\n",
-    "When your agent is being evaluated against others, it will not have access to the Kaggle docker image.  Only the following can be imported: Python Standard Library Modules, gym, numpy, scipy, pytorch (1.3.1, cpu only), and more may be added later.\n",
-    "\n"
+    "# Create an Agent"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     18,
+     27,
+     31,
+     61,
+     67,
+     76,
+     86,
+     92,
+     96,
+     128
+    ]
+   },
    "outputs": [],
    "source": [
-    "# This agent one-step lookahead chooses a non-empty column\n",
-    "# kaggle.com/alexisbcook/one-step-lookahead\n",
+    "# Based on the notebook from kaggle.com/alexisbcook/n-step-lookahead\n",
     "def my_agent(observation, configuration):\n",
     "    '''\n",
+    "    Agent will do a 2-step lookahead to see what valid moves maximize the \n",
+    "    utility function. The center column is prioritized with all things being\n",
+    "    equal, then prioritizing the adjacent columns.\n",
     "    '''\n",
     "    import numpy as np\n",
     "    import random\n",
@@ -162,7 +182,6 @@
     "                    num_windows += 1\n",
     "        return num_windows\n",
     "    \n",
-    "\n",
     "    \n",
     "    # Calculates score if agent drops piece in selected column\n",
     "    def score_move(grid, col, mark, config):\n",
@@ -43219,7 +43238,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Play your Agent\n",
+    "# Play your Agent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Click on any column to place a checker there (\"manually select action\")."
    ]
   },
@@ -44498,7 +44523,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validate Submission\n",
+    "# Validate Submission"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Play your submission against itself.  This is the first episode the competition will run to weed out erroneous agents.\n",
     "\n",
     "Why validate? This roughly verifies that your submission is fully encapsulated and can be run remotely."
@@ -44545,7 +44576,7 @@
     "\n",
     "1. Save this kernel.\n",
     "2. View the commited version.\n",
-    "3. Go to \"Data\" section and find submission.py file.\n",
+    "3. Go to \"Output\" section and find submission.py file.\n",
     "4. Click \"Submit to Competition\"\n",
     "5. Go to [My Submissions](https://kaggle.com/c/connectx/submissions) to view your score and episodes being played."
    ]
@@ -44567,7 +44598,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
