3 step lookahead after turn 12; Stop @ cutoff time - Still look ahead 3 steps but use a cutoff time to stop searching. This   should help prevent losing by "Error" when the environment reaches the   cutoff time. - Allows a debug parameter in my_agent to print out info to stdout logs   for later analysis. - TODO: Use environment defined cutoff time

--- a/connectx-getting-started-variant.ipynb
+++ b/connectx-getting-started-variant.ipynb
@@ -21,13 +21,13 @@
      "text": [
       "Collecting kaggle-environments>=0.1.6\r\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/23/2b/2aa1d6438cd9ed92e130daed7d1da08c432e105b0bda9a716744a2d06771/kaggle_environments-1.4.0-py2.py3-none-any.whl (100kB)\r\n",
-      "\u001b[K     |████████████████████████████████| 102kB 189kB/s \r\n",
+      "\u001b[K     |████████████████████████████████| 102kB 549kB/s \r\n",
       "\u001b[?25hRequirement already satisfied: jsonschema>=3.0.1 in /opt/conda/lib/python3.6/site-packages (from kaggle-environments>=0.1.6) (3.2.0)\r\n",
       "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /opt/conda/lib/python3.6/site-packages (from jsonschema>=3.0.1->kaggle-environments>=0.1.6) (0.23)\r\n",
       "Requirement already satisfied: six>=1.11.0 in /opt/conda/lib/python3.6/site-packages (from jsonschema>=3.0.1->kaggle-environments>=0.1.6) (1.13.0)\r\n",
       "Requirement already satisfied: setuptools in /opt/conda/lib/python3.6/site-packages (from jsonschema>=3.0.1->kaggle-environments>=0.1.6) (42.0.1.post20191125)\r\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in /opt/conda/lib/python3.6/site-packages (from jsonschema>=3.0.1->kaggle-environments>=0.1.6) (0.15.6)\r\n",
       "Requirement already satisfied: attrs>=17.4.0 in /opt/conda/lib/python3.6/site-packages (from jsonschema>=3.0.1->kaggle-environments>=0.1.6) (19.3.0)\r\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in /opt/conda/lib/python3.6/site-packages (from jsonschema>=3.0.1->kaggle-environments>=0.1.6) (0.15.6)\r\n",
       "Requirement already satisfied: zipp>=0.5 in /opt/conda/lib/python3.6/site-packages (from importlib-metadata; python_version < \"3.8\"->jsonschema>=3.0.1->kaggle-environments>=0.1.6) (0.6.0)\r\n",
       "Requirement already satisfied: more-itertools in /opt/conda/lib/python3.6/site-packages (from zipp>=0.5->importlib-metadata; python_version < \"3.8\"->jsonschema>=3.0.1->kaggle-environments>=0.1.6) (7.2.0)\r\n",
       "Installing collected packages: kaggle-environments\r\n",
@@ -109,23 +109,23 @@
    "source": [
     "# This agent one-step lookahead chooses a non-empty column\n",
     "# kaggle.com/alexisbcook/one-step-lookahead\n",
-    "def my_agent(observation, configuration):\n",
+    "def my_agent(observation, configuration, cutoff_time=1.6, debug=True):\n",
     "    '''\n",
     "    '''\n",
     "    import numpy as np\n",
     "    import random\n",
     "    import time\n",
+    "    \n",
+    "    # Setup time taken ()\n",
+    "    START_TIME = time.time()\n",
     "    N_STEPS = 2\n",
     "    \n",
-    "    # After about half of the board is filled, use 3-step lookahead\n",
+    "    # After more than half of the board is filled, use 3-step lookahead\n",
     "    if observation.board.count(1) >= 11:\n",
     "        N_STEPS=3\n",
-    "    \n",
-    "    # Calculates score if agent drops piece in selected column\n",
-    "    def score_move(grid, col, mark, config):\n",
-    "        next_grid = drop_piece(grid, col, mark, config)\n",
-    "        score = get_heuristic(next_grid, mark, config)\n",
-    "        return score\n",
+    "        \n",
+    "    if debug: \n",
+    "        print(f'Using {N_STEPS} step lookahead')\n",
     "\n",
     "    # Helper function for score_move: gets board at next step if agent drops piece in selected column\n",
     "    def drop_piece(grid, col, mark, config):\n",
@@ -168,14 +168,6 @@
     "                if check_window(window, num_discs, piece, config):\n",
     "                    num_windows += 1\n",
     "        return num_windows\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    # Calculates score if agent drops piece in selected column\n",
-    "    def score_move(grid, col, mark, config):\n",
-    "        next_grid = drop_piece(grid, col, mark, config)\n",
-    "        score = get_heuristic(next_grid, mark, config)\n",
-    "        return score\n",
     "\n",
     "    # Helper function for score_move: gets board at next step if agent drops piece in selected column\n",
     "    def drop_piece(grid, col, mark, config):\n",
@@ -243,7 +235,11 @@
     "    def minimax(node, depth, maximizingPlayer, mark, config):\n",
     "        is_terminal = is_terminal_node(node, config)\n",
     "        valid_moves = [c for c in range(config.columns) if node[0][c] == 0]\n",
-    "        if depth == 0 or is_terminal:\n",
+    "        # Check if we've reached the cutoff time\n",
+    "        elapsed_time = time.time() - START_TIME\n",
+    "        if (elapsed_time >= cutoff_time) or depth == 0 or is_terminal:\n",
+    "            if debug and (elapsed_time >= cutoff_time):\n",
+    "                print(f'Elapsed time (past cutoff of {cutoff_time}s): {elapsed_time}')\n",
     "            return get_heuristic(node, mark, config)\n",
     "        if maximizingPlayer:\n",
     "            value = -np.Inf\n",
@@ -257,9 +253,7 @@
     "                child = drop_piece(node, col, mark%2+1, config)\n",
     "                value = min(value, minimax(child, depth-1, True, mark, config))\n",
     "            return value\n",
-    "    \n",
-    "    \n",
-    "    start=time.time()\n",
+    "\n",
     "    \n",
     "    # Get list of valid moves\n",
     "    valid_moves = [c for c in range(configuration.columns) if observation.board[c] == 0]\n",
@@ -283,7 +277,10 @@
     "            chosen_col = random.choice([mid_col-1,mid_col+1])\n",
     "    elif (mid_col - 1) in max_cols:\n",
     "            chosen_col = mid_col-1\n",
-    "            \n",
+    "    \n",
+    "    if debug:\n",
+    "        print(f'Time: {time.time()- START_TIME}')\n",
+    "    \n",
     "    return chosen_col"
    ]
   },
@@ -303,9 +300,10 @@
     "env.reset()\n",
     "# Play against \"negamax\" agent until my agent losses\n",
     "test_agent = debug # Set to True to test \n",
+    "debug_agent = lambda x,y: my_agent(x,y,cutoff_time=0.6, debug=True)\n",
     "while test_agent:\n",
     "    env.reset()\n",
-    "    env.run([my_agent, 'negamax'])\n",
+    "    env.run([debug_agent, 'negamax'])\n",
     "    # Don't count ties as losses\n",
     "    if len(env.steps) == 43:\n",
     "        print('tie')\n",
@@ -443,7 +441,7 @@
        "  &quot;step&quot;: 0,\n",
        "  &quot;controls&quot;: false,\n",
        "  &quot;environment&quot;: {\n",
-       "    &quot;id&quot;: &quot;4281386c-22e2-11eb-81e0-29eaca0d5e4b&quot;,\n",
+       "    &quot;id&quot;: &quot;a0f24cbc-238f-11eb-a4e3-4f428c3c7f46&quot;,\n",
        "    &quot;name&quot;: &quot;connectx&quot;,\n",
        "    &quot;title&quot;: &quot;ConnectX&quot;,\n",
        "    &quot;description&quot;: &quot;Classic Connect in a row but configurable.&quot;,\n",
@@ -1636,7 +1634,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function my_agent at 0x7ff744fdad90> written to submission.py\n"
+      "<function my_agent at 0x7fe5401d0f28> written to submission.py\n"
      ]
     }
    ],
@@ -1678,6 +1676,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using 2 step lookahead\n",
+      "Time: 0.33110976219177246\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.32610535621643066\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.2627840042114258\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.26937317848205566\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.3087179660797119\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.29036736488342285\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.23051118850708008\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.21221709251403809\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.21713924407958984\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.190779447555542\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.21004080772399902\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.1937112808227539\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.23677945137023926\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.22189736366271973\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.15101933479309082\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.15079212188720703\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.1562800407409668\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.15291547775268555\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.14552569389343262\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.15970873832702637\n",
+      "Using 2 step lookahead\n",
+      "Time: 0.1554105281829834\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.7046234607696533\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.6440794467926025\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.38744091987609863\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.3837893009185791\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.3175365924835205\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.33660340309143066\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.37296438217163086\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.33358240127563477\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.3236119747161865\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.3497953414916992\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.38012075424194336\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.29085373878479004\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.2112135887145996\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.23427724838256836\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.24550485610961914\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.10147333145141602\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.04647421836853027\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.04065394401550293\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.022953271865844727\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.009151458740234375\n",
+      "Using 3 step lookahead\n",
+      "Time: 0.005890369415283203\n",
       "Success!\n"
      ]
     }
